--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f5f5f5;
+    background-image: url(./W4yDiih-teen-titans-go-2015-wallpaper.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
     margin: 0;
     padding: 0;
     display: flex;
@@ -10,35 +13,52 @@ body {
 }
 
 #quiz-container {
+    max-width: 600px;
+    margin: auto;
+    text-align: center;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    text-align: center;
 }
 
 .options {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
     gap: 10px;
     margin-top: 20px;
+    
 }
 
 .option-container {
-    border: 2px solid #3498db;
-    border-radius: 5px;
-    padding: 10px;
+    border: 2px solid #91f32a;
+    border-radius: 10px;
+    /* padding: 5px; */
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
 .option-container:hover {
-    background-color: #3498db;
+    background-color: #34cddb;
     color: #fff;
+}
+
+.selected-option {
+    background-color: #4fe80d; /* Change this to your desired color */
 }
 
 input[type="radio"] {
     display: none;
+}
+
+input[type="radio"] + label {
+    
+    display: block;
+    padding: 8px 12px;
+    
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 input[type="radio"]:checked + label {
@@ -65,61 +85,10 @@ button:hover {
 #result {
     margin-top: 20px;
     font-weight: bold;
-    color: #3498db;
+    color: #db34c8;
 }
 
 #question-number {
     margin-top: 10px;
-    color: #555;
-}
-
-#start-btn {
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-}
-
-#start-btn:hover {
-    background-color: #2980b9;
-}
-
-#quiz-container {
-    max-width: 600px;
-    margin: auto;
-    text-align: center;
-}
-
-.options {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.option-container {
-    border: 1px solid #ccc;
-    padding: 10px;
-    cursor: pointer;
-}
-
-.selected-option {
-    background-color: #c1e2b3; /* Change this to your desired color */
-}
-
-#submit-btn, #next-btn {
-    margin-top: 10px;
-}
-
-#result {
-    margin-top: 10px;
-    font-weight: bold;
-}
-
-#question-number {
-    margin-top: 10px;
-    font-style: italic;
+    color: #f70b0b;
 }
