--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     /* font-family: 'Arial', sans-serif; */
-    font-family: 'Brush Script MT', cursive;
+    font-family: 'Brush Script MT', sans-serif;
     /* background-image: url(./W4yDiih-teen-titans-go-2015-wallpaper.jpg); */
     background-repeat: no-repeat;
     background-attachment: fixed;
