--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     /* font-family: 'Arial', sans-serif; */
     font-family: 'Brush Script MT', sans-serif;
-    /* background-image: url(./W4yDiih-teen-titans-go-2015-wallpaper.jpg); */
+    background-image: url(./white_titan.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
