--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,7 @@ main p{
 .home_img {
     width: 600px;
     height: 200px;
+    border-radius: 20px;
 }
 
 .home_body header {
@@ -179,6 +180,7 @@ main p{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 10px;
 
 
 }
@@ -209,6 +211,7 @@ footer p{
     }
 
     .home_header {
+        
         margin-left: 10px;
         margin-right: 10px;
     }
