--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ button:hover {
     font-optical-sizing: auto;
     font-weight: 900;
     font-style: normal;
+    margin-top: 10px;
 
 }
 
@@ -206,9 +207,11 @@ footer p{
 }
 
 @media only screen and (max-width: 600px) {
-    .quiz_body {
-        margin: 10px;
+    main{
+        gap: 30px;
+        margin-top: -50px;
     }
+    
 
     .home_header {
         
@@ -222,7 +225,7 @@ footer p{
     }
 
     main p {
-        margin: 10px;
+        margin: 2px;
         text-align: center;
     }
 
