--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ main {
 
 #quiz-container {
     max-width: 600px;
-    margin: 2px;
+    margin: auto;
     text-align: center;
     background-color: #5a189a;
     border-radius: 10px;
