--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ button:hover {
     margin-top: 20px;
     font-weight: bold;
     font-size: xx-large;
-    color: #3c096c;
+    color: #ffee32;
     
 }
 
