--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     font-family: 'Courier New', Courier, monospace;
+    color: white;
 }
 
 .options {
@@ -107,7 +108,7 @@ button:hover {
 
 #question-number {
     margin-top: 10px;
-    color: #a53860;
+    color: white;
     font-size: xx-large;
 }
 
